<resources>
    <string name="app_name">Hafalin</string>
    <string name="tv_nav_home">Beranda</string>
    <string name="tv_nav_quran">Al-Qur\'an</string>
    <string name="tv_nav_bookmark">Penanda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_salam">Assalamu\'alaikum</string>
    <string name="tv_selamat_datang">Selamat datang di</string>
    <string name="tv_hafalin">Hafalin</string>
    <string name="tv_penanda">Penanda</string>
    <string name="tv_terakhir_dibaca">Terakhir Dibaca</string>
    <string name="tv_terakhir_dihafal">Terakhir Dihafal</string>
    <string name="tv_quran">Al-Qur\'an</string>
    <string name="tv_baca_quran">Baca Al-Qur\'an</string>
    <string name="tv_hafalan_quran">Hafalan Al-Qur\'an</string>
    <string name="tv_bookmark">Penanda</string>
    <string name="tv_ayat_dibaca">Q.S Al-Kahfi : 10</string>
    <string name="tv_surat_dihafal">Q.S An-Naba : 20</string>
    <string name="desc_ic_ayat_favorit">Ayat Favorit</string>
    <string name="tv_ayat_favorit">Ayat Favorit</string>
    <string name="tv_label_ayat_favorit">Q.S Ali-Imran : 139</string>
    <string name="title_activity_baca_quran">BacaQuranActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tv_back">Kembali</string>
    <string name="tv_surat">Al-Fatihah</string>
    <string name="tv_setting">Pengaturan</string>
    <string name="tv_info_surat">Pembukaan | 7 Ayat</string>
    <string name="desc_ic_nomor">Nomor</string>
    <string name="tv_nomor">208</string>
    <string name="tv_juz">Juz 1</string>
    <string name="tv_info_juz">148 Ayat</string>
    <string name="tab_title_1">Surat</string>
    <string name="tab_title_2">Juz</string>
    <string name="tv_ayat">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</string>
    <string name="tv_terjemahan_ayat">1. Dengan nama Allah Yang Maha Pengasih, Maha Penyayang</string>
    <string name="desc_ic_audio">Audio Ayat</string>
    <string name="desc_ic_favorit">Tandai Favorit</string>
    <string name="tv_jumlah_ayat">7 Ayat</string>
    <string name="tv_jumlah_hafalan">0 / 7</string>
    <string name="tv_ayat_surat">Ayat 1</string>
    <string name="tv_status_ayat">Status Ayat</string>
    <string name="btn_audio">Putar Audio</string>
    <string name="btn_rekam">Rekam Suara</string>
    <string name="tv_hasil_hafalan">Hasil Hafalan</string>
    <string name="tv_predikat_hasil">Sangat Baik</string>
    <string name="tv_hasil_deteksi">Hasil Deteksi</string>
    <string name="tv_ayat_kesalahan">قُلْ اَعُوْذُ بِرَبِّ النَّاسِ</string>
    <string name="desc_ic_notifikasi">Notifikasi Pengingat</string>
    <string name="tv_label_progres_hafalan">Progres Hafalan Al-Qur\'an Kamu Saat ini :</string>
    <string name="desc_ic_progres">Progres Hafalan</string>
    <string name="tv_progres_hafalan">Hafalan Lancar</string>
    <string name="tv_ayat_ke">Ayat 1</string>
    <string name="tv_audio_ayat">Al-Fatihah : 1</string>
    <string name="desc_ic_pause">Pause Audio</string>
    <string name="desc_ic_play">Play Audio</string>
    <string name="desc_ic_reset">Reset Audio</string>
    <string name="desc_btn_stop">Stop Audio</string>
    <string name="tv_rekam_suara">Rekam Suara</string>
    <string name="desc_ic_close">Tutup</string>
    <string name="tv_perintah_rekam_suara">Tekan tombol dibawah ini untuk memulai rekaman</string>
    <string name="desc_btn_rekam_suara_start">Rekam Suara</string>
    <string name="desc_ic_notifikasi_pengingat">Notifikasi Pengingat</string>
    <string name="tv_perintah_terakhir_dibaca">Apakah anda yakin menandai ayat ini sebagai ayat yang terakhir dibaca?</string>
    <string name="btn_simpan">Simpan</string>
    <string name="btn_batal">Batal</string>
    <string name="toast_permission">Gagal memberi perizinan, silakan coba lagi</string>
    <string name="no_data_ayat_favorit">Anda belum menyimpan Ayat sebagai Favorit</string>
    <string name="tv_perintah_ayat_favorit">Apakah anda yakin menyimpan ayat ini sebagai Ayat Favorit?</string>
    <string name="desc_ic_hapus_ayat_favorit">Hapus Ayat Favorit</string>
    <string name="tv_hapus_ayat_favorit">Hapus Ayat Favorit</string>
    <string name="tv_perintah_hapus_ayat_favorit">Apakah anda yakin menghapus ayat ini sebagai Ayat Favorit?</string>
    <string name="tv_notifikasi_pengingat">Pengaturan Notifikasi Pengingat</string>
    <string name="tv_perintah_atur_notifikasi">Atur waktu untuk menampilkan notifikasi pengingat hafalan.</string>
    <string name="tv_waktu_pengingat">06 : 00</string>
    <string name="tv_judul_notifikasi">Sudahkah Kamu Setor Hafalan Hari Ini?</string>
    <string name="tv_isi_notifikasi">Lanjutkan hafalan Al-Qur\'an mu minimal satu hari satu ayat, Hamasahh!!</string>
    <string name="tv_ayat_selanjutnya"><![CDATA[Lanjut ke Ayat Selanjutnya >>>]]></string>
    <string name="tv_status_hafalan">Progres Hafalan Al-Qur\'an</string>
    <string name="tv_lancar">Hafalan Lancar</string>
    <string name="tv_detail_lancar">(Menghafal 1 ayat dalam 1 hari)</string>
    <string name="tv_kuranglancar">Kurang Lancar</string>
    <string name="tv_detail_kuranglancar">(Menghafal 1 ayat dalam 1 - 3 hari)</string>
    <string name="tv_tidaklancar">Tidak Lancar</string>
    <string name="tv_detail_tidaklancar"><![CDATA[(Menghafal 1 ayat dalam > 3 hari)]]></string>
    <string name="tv_nav_setting">Pengaturan</string>
    <string name="back">Back</string>
    <string name="tv_title_onboarding">Title Onboarding</string>
    <string name="tv_desc_onboarding">Lorem Ipsum Dolor Sit Amet</string>
    <string name="title_onboarding_1">Baca Al-Qur\'an</string>
    <string name="description_onboarding_1">Hafalin menyediakan teks Al-Qur\'an secara utuh beserta terjemahan dan audio bacaannya yang dapat anda baca dan pelajari.</string>
    <string name="title_onboarding_2">Setoran Hafalan Al-Qur\'an</string>
    <string name="description_onboarding_2">Hafalin menggunakan Speech Recognition untuk setoran hafalan Al-Qur\'an dan hasil hafalan didapatkan secara instan.</string>
    <string name="title_onboarding_3">Status Hafalan</string>
    <string name="description_onboarding_3">Dengan fitur hafalan Satu Hari Satu Ayat anda dapat melihat bagaimana progres status hafalan Al-Qur\'an yang telah dilakukan.</string>
    <string name="tv_finish">Finish</string>
    <string name="tv_switch_theme">Ganti Warna Latar</string>
    <string name="desc_ic_light">Light Mode</string>
    <string name="desc_ic_dark">Dark Mode</string>
    <string name="tv_empty_progres_hafalan">Anda Belum Memulai Hafalan</string>
    <string name="btn_proses">Play Rekaman</string>
    <string name="tv_tingkat_kemiripan">Tingkat Kemiripan</string>
    <string name="tv_persentase_kemiripan">50%</string>
</resources>