<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/bg_dialog">

        <TextView
            android:id="@+id/tv_terakhir_dibaca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tv_semibold"
            android:textSize="12sp"
            android:text="@string/tv_terakhir_dibaca"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"/>

        <ImageView
            android:id="@+id/ic_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/desc_ic_close" />

        <TextView
            android:id="@+id/tv_perintah_terakhir_dibaca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/tv_perintah_terakhir_dibaca"
            style="@style/tv_regular"
            android:textSize="12sp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintTop_toBottomOf="@id/ic_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_simpan"
            app:layout_constraintCircleRadius="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/btn_simpan"
            android:paddingVertical="15dp"
            android:paddingHorizontal="10dp"
            android:text="@string/btn_simpan"
            android:layout_marginStart="50dp"
            app:layout_constraintTop_toBottomOf="@id/tv_perintah_terakhir_dibaca"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="30dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_batal"
            app:layout_constraintCircleRadius="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/btn_batal"
            android:paddingVertical="15dp"
            android:layout_marginEnd="50dp"
            android:paddingHorizontal="10dp"
            android:text="@string/btn_batal"
            app:layout_constraintTop_toBottomOf="@id/tv_perintah_terakhir_dibaca"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="30dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>