<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_ayat"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_ayat"
        style="@style/bg_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ic_nomor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/desc_ic_nomor"
            android:src="@drawable/ic_nomor_blue"
            app:layout_constraintBottom_toBottomOf="@id/tv_ayat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_ayat" />

        <TextView
            android:id="@+id/tv_nomor"
            style="@style/tv_nomor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="@id/ic_nomor"
            app:layout_constraintEnd_toEndOf="@id/ic_nomor"
            app:layout_constraintStart_toStartOf="@id/ic_nomor"
            app:layout_constraintTop_toTopOf="@id/ic_nomor"
            tools:ignore="SmallSp"
            tools:text="@string/tv_nomor" />

        <TextView
            android:id="@+id/tv_ayat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/rubik_regular"
            android:textColor="@color/black_040D12"
            android:textSize="24sp"
            android:lineSpacingExtra="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/tv_ayat" />

        <TextView
            android:id="@+id/tv_terjemahan_ayat"
            style="@style/tv_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ayat"
            tools:text="@string/tv_terjemahan_ayat" />

        <ImageView
            android:id="@+id/ic_audio"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/desc_ic_audio"
            android:src="@drawable/ic_audio_blue"
            app:layout_constraintEnd_toEndOf="@id/tv_terjemahan_ayat"
            app:layout_constraintTop_toBottomOf="@id/tv_terjemahan_ayat" />

        <ImageView
            android:id="@+id/ic_favorit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/desc_ic_favorit"
            android:src="@drawable/ic_favorit_blue"
            app:layout_constraintBottom_toBottomOf="@id/ic_audio"
            app:layout_constraintEnd_toStartOf="@id/ic_audio"
            app:layout_constraintTop_toTopOf="@id/ic_audio" />

        <ImageView
            android:id="@+id/ic_tandai"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_tandai_blue"
            app:layout_constraintBottom_toBottomOf="@id/ic_favorit"
            app:layout_constraintEnd_toStartOf="@id/ic_favorit"
            app:layout_constraintTop_toTopOf="@id/ic_favorit" />

        <View
            android:id="@+id/line_light"
            style="@style/line_thin"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/ic_audio" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>